[package]
name = "transmission-client"
version = "0.1.3"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
edition = "2018"
description = "Rust wrapper for Transmission rpc specs"
license = "MIT"
documentation = "https://docs.rs/transmission-client"
homepage = "https://gitlab.gnome.org/haecker-felix/transmission-client"
repository = "https://gitlab.gnome.org/haecker-felix/transmission-client"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = { version = "2.2", features = ["serde"] }
log = "0.4"
isahc = "1.3"
thiserror = "1.0"
base64 = "0.13"
