[package]
name = "transmission-client"
version = "0.1.6"
authors = [ "Felix Häcker <haeckerfelix@gnome.org>" ]
edition = "2024"
description = "Rust wrapper for Transmission rpc specs"
keywords = [ "transmission", "torrent", "bittorrent", "rpc", "download" ]
categories = [ "api-bindings" ]
license = "MIT"
documentation = "https://docs.rs/transmission-client"
homepage = "https://gitlab.gnome.org/haecker-felix/transmission-client"
repository = "https://gitlab.gnome.org/haecker-felix/transmission-client"

[dependencies]
log = "0.4"
reqwest = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_with = "3.14"
thiserror = "2.0"
url = { version = "2.5", features = [ "serde" ] }
